--- a/app/src/main/res/layout/activity_mission.xml
+++ b/app/src/main/res/layout/activity_mission.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rcc.cudapp.FlightPlanActivity">
+    tools:context="com.rcc.cudapp.MissionActivity">
 
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/map2"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="500dp"
@@ -20,8 +20,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.817" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
